Incorporated answers to Review 1.

--- a/Machine Learning Basic/projects/finding_donors/finding_donors.ipynb
+++ b/Machine Learning Basic/projects/finding_donors/finding_donors.ipynb
@@ -908,6 +908,23 @@
     "\n",
     "**Logistic Regression** - A quick and close way to benchmark. Can work even if variable distribution is not normal.\n",
     "\n",
+    "---\n",
+    "<font color=\"grey\">\n",
+    "**Additions after Review no. 1 are in Grey**\n",
+    "</font>\n",
+    "\n",
+    "\n",
+    "<font color=\"grey\">\n",
+    "#### Additional comments after Review 1:\n",
+    "**AdaBoost** is used for object detection (prominently as face detection). Quote from Wikipedia : <i>The object detection framework employs a variant of the learning algorithm AdaBoost</i>. \n",
+    "[[Viola–Jones object detection framework]](https://en.wikipedia.org/wiki/Viola%E2%80%93Jones_object_detection_framework#Learning_algorithm). Advantage of AdaBoost is that, the complexity is lesser, requires less parameter tuning. Disadvantages: it is prone to over-fitting if data is noisy. In our case, since data is not noisy, no outliers, we can expect adaBoost to perform good.\n",
+    "\n",
+    "**Gradient Boosting** is used in Ranking for web search [[McRank at NIPS 2007]](https://papers.nips.cc/paper/3270-mcrank-learning-to-rank-using-multiple-classification-and-gradient-boosting).\n",
+    "Advantages: Not sensitive to scales of various predictors, thus requires lesser data pre-processing and playes key role for online and real-time classification tasks. It learns higher order interactions between predictors [[Uni. of Washington]](https://homes.cs.washington.edu/~tqchen/pdf/BoostedTree.pdf). Disadvantages: Most prominent I can think of is lack of parallelism as the the inherent nature of classifier is improving step-by-step. Thus training time is very long (also evident while I ran grid search). They are also prone to overfitting, we should always rely on k-fold CV to choose optimal parameters. In our data, with these precautions, GB can be useful. (Although, I cann't think of any scenarios where GB would be bad!)\n",
+    "\n",
+    "**Logistic Regression** is used in [Sensei library by Google](https://github.com/google/sensei). Advantages: As mentioned earlier, predictors need not be distributed normally (which typically is the case in reality where we see long tailed distributions). Conceptually it is easier to understand in a sense that we have control of adding any interaction term, higher polynomials etc. It is quick in giving rough idea about importance of predictors (p-values). Disadvantages: We cann't solve non-linear problems like XOR. Again, it is prone to overfitting if data is too less. In our setup, we have sufficient data, so we can use logistic regression as a starting point.\n",
+    "</font>\n",
+    "<hr/>\n",
     "### Rejected Classifiers\n",
     "**Gaussian Naive Bayes** - Makes a strong assumption of conditional independence between predictors. In our case, education level and education num(ber of years) seem to be quite related. Also, marital-status and relationship look inter-dependent. Also, since original capital-gain and capital-loss were not gaussian (although, log transformation might get them near gaussian), this classifier does not seem to contest for top 3 position.\n",
     "\n",
@@ -1323,6 +1340,9 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
+    "<font color=\"grey\">\n",
+    "**Additions after Review no. 1 are in Grey**\n",
+    "</font>\n",
     "\n",
     "Hello CharityML team,\n",
     "\n",
@@ -1331,6 +1351,9 @@
     "I judged various classifiers based on \n",
     "- F-beta score (how precise are we on predicting new/unseen data?) \n",
     "- Execution time (how quickly can we train/re-train/predict?)\n",
+    "<font color=\"grey\">\n",
+    "- Sutaibility of Gradient Boosting to our data - since our data is little bit skewed, still this algorithm is able to get good accuracy and good F-beta score.\n",
+    "</font>\n",
     "\n",
     "I tried AdaBoost(AB), Gradient Boosting(GB) & Logistic Regression(LR) and found that we get most precise results with GB. Running time wise, LR is clear winner, but GB is not bad too! GB does take quite long for training, but training happens only once (or far less often than predicting).\n",
     "\n",
@@ -1356,10 +1379,17 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
+    "<font color=\"grey\">\n",
+    "**Additions after Review no. 1 are in Grey**\n",
+    "</font>\n",
+    "\n",
     "As mentioned earlier, I am going ahead with GBM classifier. Below is little context about how it will work -\n",
     "\n",
     "GBM is composed of a chain of multiple simple classifiers. These simple units are also called as weak-learners.\n",
     "During training phase, each of the weak learner tunes itself to align to the training data better than its previous learner in the chain.\n",
+    "<font color=\"grey\">\n",
+    "We train our first weak classifier, post training, data that is still not getting classified correctly is used to build second classifier and the weighted results of first and second classifier are combined, this process is repeated for further classifier creations untill some stopping criterion is met.\n",
+    "</font>\n",
     "\n",
     "During generation of first cut model, I have used all available training data to tune weak learners (using a random subset makes model more robust with minor trade-off with accuracy)"
    ]
@@ -1836,10 +1866,17 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
+    "<font color=\"grey\">\n",
+    "**Additions after Review no. 1 are in Grey**\n",
+    "</font>\n",
+    "\n",
     "Accuracy for all feature model is very close to top-5 model,\n",
     "BUT - our main scoring criterion, F-beta score for reduced model is significantly lower than full model.\n",
     "\n",
-    "If the success metrics for both were very close, I would go for reduced model (but not reduced data)."
+    "If the success metrics for both were very close, I would go for reduced model (but not reduced data).\n",
+    "<font color=\"grey\">\n",
+    "If training time is a factor, i.e. we want to train as quickly as possible, I would not prefer to reducing data. Instead, I would first try with top-n important variables. Then I would try to improve upon parallelization. If none of these are possible, only then I would try with random x% of data for training.\n",
+    "</font>"
    ]
   },
   {
@@ -1852,6 +1889,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python [anaconda3]",
    "language": "python",
