--- a/Machine Learning Basic/projects/customer_segments/customer_segments.ipynb
+++ b/Machine Learning Basic/projects/customer_segments/customer_segments.ipynb
@@ -2539,7 +2539,7 @@
    "source": [
     "**Answer:**\n",
     "<font color=\"navy\">\n",
-    "Reduction in availability of delivery service will affect negatively to daily required services. Fresh comes in such category (Milk can be preserved for few more days). Thus if delivery service wants to reduce services, it should only do so for customers in segment 1 (Milk, Grocery and Detergents)"
+    "Reduction in availability of delivery service will affect negatively to daily required services. Fresh comes in such category (Milk can be preserved for few more days). Thus, if delivery service wants to reduce services, it should only do so for customers in segment 1 (Milk, Grocery and Detergents)"
    ]
   },
   {
